src/test/deca/context/invalid/objet/MethodReturnWrongType.deca
// The type of the variable and its assignation are not compatible (int,float)
// Description :
//    Test génération de code pour un return mauvais
//
// Resultats decac: 
// Resultat ima: /

class A{
	int main(){
		return 2.4;
	}
}